--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.supply.entity.po
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
