--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,9 @@ spring.datasource.url=jdbc:mysql://139.196.166.177:3306/supply_db?useUnicode=tru
 spring.datasource.username=root
 spring.datasource.password=helloworld123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.supply.entity.po
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
